--- a/estilo/style.css
+++ b/estilo/style.css
@@ -57,12 +57,36 @@ section.normal {
 section.imagem {
     background-color: rgb(49, 48, 48);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.44);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
     background-color: rgba(0, 0, 0, 0.174);
     display: inline-block;
     padding: 10px;
+}
+
+section > p {
+    padding-bottom: 2em;
+    text-shadow: 1px 1px 0px black;
+}
+
+section#img01 {
+    background-image: url('../estilo/imgs/background001.jpg');
+    background-position: right center;
+   
+}
+
+section#img02 {
+    background-image: url('../estilo/imgs/background002.jpg');
+
+}
+
+section#img02 > p {
+    color: black;
+    text-shadow: 1px 1px 0px black;
 }
 
 a {
